facet-args/tests/snapshots/sequence__doubledash_flags_before_dd.snap
---
source: tests/sequence.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --foo --bar --baz 
   ·             ──┬──
   ·               ╰── unknown long flag
   ╰────
