facet-args/tests/snapshots/sequence__noargs_vec_positional_no_default.snap
---
source: tests/sequence.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
   ╰────
